Fixed map stretch when sidebar is hidden

--- a/webmonitor/public/stylesheets/TerraMA2WebMonitor.css
+++ b/webmonitor/public/stylesheets/TerraMA2WebMonitor.css
@@ -32,7 +32,8 @@ html {
 }
 
 #terrama2-map {
-  width: 100% !important;
+  width: 100vw !important;
+  height: 100vh !important;
 }
 
 .ol-viewport {
